src/test/deca/context/invalid/homemade/unknown_type.deca
// trying to affect unknwon type to var

{
    coucou x;
}